@@ -438,6 +438,7 @@ All:
 - Correct bugs when using wxTextInputStream with wxConvAuto (Leon Buikstra).
 - Don't crash when input is empty in wxFileConfig ctor (Lukasz Michalski).
 - Correct wxSocket::Peek() to not block (Anders Larsen).
+- Added IEC and SI units support to GetHumanReadableSize() (Julien Weinzorn).
 
 Unix:
 
